<resources>
    <string name="app_name">VaruKontroll</string>
    <string name="createAccount">Skapa konto</string>
    <string name="email">Email</string>
    <string name="password">Lösenord</string>
    <string name="signIn">Logga in</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="add">Öka</string>
    <string name="remove">Ta bort</string>
    <string name="meat">Kött</string>
    <string name="sausage">Korv</string>
    <string name="cheese">Ost</string>
    <string name="sauces">Såser / Dressing</string>
    <string name="bread">Bröd</string>
    <string name="spices">Kryddor</string>
    <string name="ingredients">Ingredienser</string>
    <string name="decrease">Minska</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logOut">Logga ut</string>
</resources>
